# mairu

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  credentials.json.example  env.example  how.md  poetry.toml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: a59ce48fbdfe_initial_migration.py  add_updated_at_to_tokens.py
app/: config.py  credentials.json  dependencies.py  main.py  project_structure.txt
app/models/: database_models.py  schemas.py
app/services/: auth.py  database.py  scheduler.py  sheets.py  token_store.py
frontend/: background.js  manifest.json  popup.html  popup.js
src/: __init__.py
src/app/: config.py  credentials.json  database.py  dependencies.py  main.py
src/app/frontend/: app.py  content.js  manifest.json  popup.css
src/app/frontend/components/: auth.py  document_generation.py  email_scheduling.py  image_automation.py  sheets.py
src/app/frontend/utils/: api_helper.py
src/app/models/: database_models.py  schemas.py
src/app/services/: auth.py  database.py  docs.py  drive.py  gmail.py  instagram.py  monitoring_service.py  scheduler.py  sheets.py  token_store.py
